fix button submit on index file by changing class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Search the movie db for:
         <br>
         <input type="text" name="firstname" id="query">
-        <input type="button" id="chooseButton" class="submit" name="Submit" value="Submit" />
+        <input type="submit" id="chooseButton" class="submit" name="Submit" value="Submit" />
     </form>
 
     <div id="search-results"></div>
